# Tamasha

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  api-map.md  architecture.md  database-map.md  dependency-graph.md  docker-compose.observability.yml  docker-compose.yml  memory.md  pyproject.toml  render.yaml  requirements.txt  routes.md  setup.py
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
api/: __init__.py  main.py  schemas.py
api/routers/: model_info.py  network.py  predict.py
app/: api_client.py  streamlit_app.py
app/assets/: theme.css
app/components/: metric_cards.py  network_graph.py
app/pages/: _1_Predict_a_Release.py  _2_Star_Network_Explorer.py  _3_Industry_Trends.py  _4_Model_Performance.py
ops/: prometheus.yml
reports/: bankability_scores.csv  chemistry_pairs.csv  genre_tone_correlation.csv  join_quality_report.md  model_comparison_boxoffice_baseline.csv  model_comparison_boxoffice_with_bankability.csv  model_comparison_rating.csv  tmdb_enrichment_coverage.md
tests/: __init__.py  conftest.py  test_api.py  test_api_client.py  test_api_contract.py  test_auth.py  test_bankability_regression.py  test_bankability_score.py  test_cache.py  test_chemistry_pairs.py  test_clash_detection_scale.py  test_cleaning.py  test_enrichment.py  test_features.py  test_festival_calendar.py  test_festival_calendar_property.py  test_integrity.py  test_joining.py  test_model_selection.py  test_predict_service.py  test_scatter_cv_consistency.py
(+32 files in other folders)
